Fix scrollbar color scheme

--- a/styles/ant.less
+++ b/styles/ant.less
@@ -111,6 +111,10 @@ body {
   --cr-primary-color: @cr-dark-primary-color;
   --cr-primary-tooltip: @cr-gray-10;
 
+  body {
+    color-scheme: dark;
+  }
+
   body::-webkit-scrollbar-track {
     background-color: var(--cr-tertiary-bg);
   }
